SE INCORPORO LA CONSULTA DE NOMBRES A LA RENIEC

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-PORT=3002
-DB_URI =mongodb+srv://tcompraperu:hKLFyWFy1jtuBcGi@cluster-tcompra.vpghbka.mongodb.net/?retryWrites=true&w=majority&appName=Cluster-tcompra
+PORT=3001
+DB_URI =mongodb+srv://tcompraperu:2YFaNqTymGcKH5ZF@clustertest.oiyhs.mongodb.net/BDTestTCompra?retryWrites=true&w=majority&appName=ClusterTest
 JWT_SECRET = X8d7!qLz1#P@k&2^R9nV4tG$W6oB+uM7J%Yv3xKz8F
+TOKEN_RENIEC=apis-token-4396.oK9eDP-jOyzv4BOScpXEXwFNzfBW4qS4
