--- a/package.json
+++ b/package.json
@@ -15,22 +15,26 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "short-unique-id": "^5.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
-    "@types/multer": "^1.4.12"
+    "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.15"
   }
 }
