--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ PORT=3001
 DB_URI =mongodb+srv://tcompraperu:2YFaNqTymGcKH5ZF@clustertest.oiyhs.mongodb.net/BDTestTCompra?retryWrites=true&w=majority&appName=ClusterTest
 JWT_SECRET = X8d7!qLz1#P@k&2^R9nV4tG$W6oB+uM7J%Yv3xKz8F
 TOKEN_RENIEC=apis-token-4396.oK9eDP-jOyzv4BOScpXEXwFNzfBW4qS4
+
+CLOUDINARY_CLOUD_NAME=dlxlveta2
+CLOUDINARY_API_KEY=498896384715854
+CLOUDINARY_API_SECRET=D5YQeZzI0s2PrxsY-XcayJ233ck
