--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,
-    "outDir": "./dist"                                 /* Skip type checking all .d.ts files. */
-  }
+    "outDir": "./dist",
+    "typeRoots": ["./node_modules/@types", "./types"],
+    "types": ["node"] 
+                              /* Skip type checking all .d.ts files. */
+  },
+   "include": [
+    "src/**/*"
+  ]
 }
