--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "short-unique-id": "^5.2.0"
+    "short-unique-id": "^5.2.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
