--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ TOKEN_RENIEC=apis-token-4396.oK9eDP-jOyzv4BOScpXEXwFNzfBW4qS4
 CLOUDINARY_CLOUD_NAME=dlxlveta2
 CLOUDINARY_API_KEY=498896384715854
 CLOUDINARY_API_SECRET=D5YQeZzI0s2PrxsY-XcayJ233ck
+
+API_PRODUCTS=http://3.16.69.110:3002
+API_SERVICES=http://18.219.37.119:3004
+API_LIQUIDATIONS=http://18.220.126.92:3003
