--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ CLOUDINARY_API_SECRET=D5YQeZzI0s2PrxsY-XcayJ233ck
 API_PRODUCTS=http://3.16.69.110:3002
 API_SERVICES=http://18.219.37.119:3004
 API_LIQUIDATIONS=http://18.220.126.92:3003
+URL_FRONTEND=http://localhost:3000
