--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "short-unique-id": "^5.2.0",
     "socket.io": "^4.8.1"
@@ -38,6 +39,7 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15"
   }
 }
