--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ API_PRODUCTS=http://3.16.69.110:3002
 API_SERVICES=http://18.219.37.119:3004
 API_LIQUIDATIONS=http://18.220.126.92:3003
 URL_FRONTEND=http://localhost:3000
+
+//CHAT BOT 
+OPENAI_API_KEY=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
