--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,5 @@ API_LIQUIDATIONS=http://18.220.126.92:3003
 URL_FRONTEND=http://localhost:3000
 
 //CHAT BOT 
-GROQ_API_=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
+GROQ_API_=(clavegsk_aaeATHK4nIkfyE2nrcfUWGdyb3FYNluH7EybjvPnRrd5SZmQGhPA)
+
