--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,4 @@ API_LIQUIDATIONS=http://18.220.126.92:3003
 URL_FRONTEND=http://localhost:3000
 
 //CHAT BOT 
-GROQ_API=
-clavegaaeATHK4nIkfyE2nrcfUWGdyb3FYNluH7EybjvPnRrd5SZmQGhPA)
-
+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
