--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/server.ts",
-    "build": "tsc",
+    "build": "tsc && cp src/utils/infoChat.md dist/utils/infoChat.md",
     "start": "node ./dist/server.js"
   },
   "keywords": [],
