Permitir solicitudes de mismo origen en  cors

--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,6 @@ GROQ_API=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
 
 NODE_ENV=prod
 URL_FRONTEND=https://tcompra.com
+API_USER=https://apiusers.tcompra.com/
 # Para requests a rutas protegidas de otros servidores de TCompra, incluir en header como [secretInternalName]: process.env.INTERNAL_SECRET 
 INTERNAL_SECRET=vY1g8tF5S7CZyLZPbEIxv3TZh0KfKfRM0cHdHzvGOW0 
